[FEATURE] GET /users -  GET /activity
