# server/providers/dao/UserNeo4JRequester.js
@@ -78,6 +78,49 @@ class UserNeo4JRequester {
       });
   }
 
+  static findAll(conditions, next) {
+    const filter = `${(conditions.id)? "id : $id," : ""} ${(conditions.name)? "name : $name," : ""} `;
+
+    neo4JSessionInstance.run(`MATCH (users:User {${filter}} ) RETURN users`, conditions)
+      .then(result => {
+        console.log('0')
+        let getUsers = [];
+        result.records.forEach(singleRecord => {
+          const node = singleRecord.get(0)
+          const getUser = {
+            id: node.properties.id,
+            name: node.properties.name
+          }
+          getUsers.push(getUser)
+        })
+
+        next(null, getUsers)
+        })
+      .catch(err => {
+        console.log('1')
+
+        next(err);
+      });
+  }
+
+  static deleteAllUsers(next) {
+    neo4JSessionInstance.run('MATCH (users:User {}) DELETE users', {})
+      .then(result => {
+        let deletedUsers = [];
+        result.records.forEach(singleRecord => {
+          const node = singleRecord.get(0)
+          const deletedUser = {
+            id: node.properties.id,
+            name: node.properties.name
+          }
+          deletedUsers.push(deletedUser)
+        })
+        next(null, deletedUsers)
+      })
+      .catch(err => {
+        next(err);
+      })
+  }
 }
 
 module.exports = UserNeo4JRequester;
